basicservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-dotnetmvc-svc
  namespace: dotnetmvc
spec:
  ports:
  - port: 80
    protocol: TCP
    name: my-http-port
  type: NodePort
  selector:
    app: dotnetmvc
